# dijiware-mac

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  mvfw  partitions.csv  sdkconfig  sdkconfig 2.old  sdkconfig.defaults  sdkconfig.old  verify_idf_env.sh  version.txt
components/blemidi/: blemidi.c
components/blemidi/include/: blemidi.h
components/espressif__esp_tinyusb/: .component_hash  idf_component.yml  tinyusb.c  usb_descriptors.c
components/uartmidi/: CMakeLists.txt  uartmidi.c
components/uartmidi/include/: uartmidi.h
components/usbmidi/: CMakeLists.txt  usbmidi.c
components/usbmidi/include/: usbmidi.h
docs/: FREERTOS_MENUCONFIG.md
main/: CMakeLists.txt  FileHandler.cpp  FileHandler.h  FirmwareUpdater.cpp  FirmwareUpdater.h  WebServer.cpp  WebServer.h  Wifi.cpp  Wifi.h  adc.c  adc.h  ble.c  ble.h  common.h  esp_host_stub.h  etar.c  etar.h  freertos_host_stub.h  gpio.c  gpio.h  http_ota_cors.h  i2c_adc.c  i2c_adc.h  i2c_gui.c  i2c_gui.h  idf_component.yml  index.html  interfaces.c  interfaces.h  led.c  led.h  main.c  main.h  mc3419.c  mc3419.h  mcp23s08.c  mcp23s08.h  mcp23s18.h  metronome.c  metronome.h  (+28 more)
spiffs_img/: 1.mid  2.mid  3.mid  4.mid  Untitled  settings.json
test/: CMakeLists.txt
test/main/: CMakeLists.txt  test_runner.c
